# PyStreamMCP

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN_VALIDATED_CACHING.md  INTEGRATION_STATGUARDIAN.md  OKF_INTEGRATION.md  README.md  RELEASE_v0.3.0.md  RESEARCH_INTELLIGENT_SCHEMA_VALIDATION.md  RESEARCH_SEMANTIC_CACHING.md  ROADMAP.md  ROADMAP_INTEGRATED.md  STAGE_4_COMPLETE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: context.rs  discovery.rs  error.rs  executor.rs  lib.rs  mcp.rs  optimization.rs  query.rs  statguardian.rs
core/src/decomposition/: mod.rs  query_decomposer.rs
core/src/metadata/: cache.rs  filter.rs  mod.rs  types.rs
core/src/ml/: learned_relevance.rs  mod.rs
core/src/multi_agent/: context_hub.rs  mod.rs
core/src/observability/: audit.rs  logging.rs  metrics.rs  mod.rs  tracing.rs
core/src/quality_gates/: confidence.rs  fallback.rs  mod.rs  policies.rs  validators.rs
core/src/selective_retrieval/: budgets.rs  intent.rs  mod.rs  multiplier.rs  reranker.rs  types.rs
core/src/storage/: mod.rs  repository.rs  schema.rs
core/src/streaming/: context_stream.rs  mod.rs
examples/: basic_usage.py  install_and_serve.sh  langchain_agent_advanced.py  langchain_integration.py  llamaindex_integration.py  workflow_integrations.md
python/: Cargo.toml
python/pystreammcp/: __init__.py  adapters.py  agent.py  api.py  cli.py  context.py  decomposition.py  discovery.py  mcp_server.py  ml.py  multi_agent.py  okf_core.py  okf_discovery.py  okf_query_planner.py  optimization.py  quality.py  query.py  server.py  streaming.py
python/pystreammcp/integrations/: __init__.py  crewai.py  haystack.py  langchain.py  langsmith.py  llamaindex.py  pydantic_ai.py  semantic_kernel.py
python/pystreammcp/ml/: __init__.py  relevance.py  tagging.py
python/pystreammcp/observability/: __init__.py  metrics.py
python/pystreammcp/optimization/: __init__.py  advanced.py  decomposition.py
python/pystreammcp/orchestration/: __init__.py  airflow.py  nocode_rpa.py  temporal.py
python/pystreammcp/qa/: __init__.py  validator.py
python/src/: lib.rs
tests/: metadata_filtering_tests.rs  selective_retrieval_tests.rs  test_langchain_integration.py  test_llamaindex_integration.py  test_okf_core.py  test_okf_discovery.py  test_okf_query_planner.py  test_phase3_advanced.py  test_phase3_items12.py  test_phase3_items345.py  test_sprint1_foundation.py  test_sprint2_langchain.py  test_sprint3_rag_frameworks.py  test_sprint4_agent_frameworks.py  test_sprint5_orchestration.py  test_statguardian_integration.py
