[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "PyStreamMCP"
version = "0.1.0"
description = "Intelligence layer for AI agents - query planning, discovery, cost optimization"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
module-name = "pystreammcp._core"
python-source = "python"
features = ["pyo3/extension-module"]

[project.urls]
Repository = "https://github.com/Mullassery/PyStreamMCP"
Issues = "https://github.com/Mullassery/PyStreamMCP/issues"
