[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyStreamMCP"
version = "0.4.0"
description = "Intelligence layer for AI agents - query planning, discovery, cost optimization"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "python-frontmatter>=1.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Mullassery/PyStreamMCP"
Issues = "https://github.com/Mullassery/PyStreamMCP/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
]

# REST API and Server
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.0",
]

# MCP (Model Context Protocol)
mcp = [
    "mcp>=0.1.0",
]

# LLM Framework Integrations
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.9.0"]
semantic-kernel = ["semantic-kernel>=0.4.0"]
crewai = ["crewai>=0.1.0"]
pydantic-ai = ["pydantic-ai>=0.1.0"]
haystack = ["haystack-ai>=2.0.0"]

# Orchestration Tools
temporal = ["temporalio>=1.0.0"]
airflow = ["apache-airflow>=2.7.0"]

# All integrations
all-integrations = [
    "langchain>=0.1.0",
    "llama-index>=0.9.0",
    "semantic-kernel>=0.4.0",
    "crewai>=0.1.0",
    "pydantic-ai>=0.1.0",
    "haystack-ai>=2.0.0",
    "temporalio>=1.0.0",
    "apache-airflow>=2.7.0",
]

