[package]
name = "pystreammcp-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.13", features = ["json"] }
opentelemetry = "0.22"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
