[package]
name = "pystreammcp"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
pystreammcp-core = { path = "../core" }
pyo3 = { version = "0.29", features = ["extension-module"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib"]
